# abntext

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: publish.yml
.superpowers/brainstorm/29539-1773608479/: .server-info  ui-placement.html
abntext/: cli.py  main.py  pipeline.py
docs/superpowers/plans/: 2026-03-15-abntext.md  2026-03-15-bibtex-file-creation.md
docs/superpowers/specs/: 2026-03-15-abntext-design.md  2026-03-15-bibtex-file-creation-design.md
example/: example.bib  example.md
latex/: flam.cls
templates/: flam.tex
tests/: test_cli.py  test_main.py  test_pipeline.py
tests/js/: bibtex.test.js
web/: bibtex.js  index.html
